replaced icon.png with svg, made the buttons less round, made the alignment and padding nicer, corrected spacing

--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ p {
 
 /* navigation bar classes */
 .navbar {
+ width: 120%;
  background-color: #222;
  overflow: hidden;
 }
@@ -20,23 +21,21 @@ p {
  font-size: 25px;
  background-color: #333;
  background-clip: border-box;
- border-radius: 15px;
+ border-radius: 5px;
  padding-left: 10px;
  padding-right: 10px;
- vertical-align: 5px;
-margin-right: 15px;
-font-family: sans-serif
+ vertical-align: middle;
+ margin-right: 15px;
+ font-family: sans-serif
 }
 .navbar a:hover {
  background-color: #333;
  color: limegreen;
 }
-
-img {
+.navbar img {
     width: 2%;
-    vertical-align: bottom;
-    padding: 2px;
-    padding-right: 6px;
+    vertical-align: middle;
+    margin: 3px;
 }
 
 /* iframes */
